# zombie-bite

./: Cargo.toml  README.md  poc.sh
.github/: env
.github/workflows/: ci.yml  release.yml
examples/: README.md  all-system-chains.toml  asset-hub-only.toml  development-overrides.toml  kusama-network.toml
src/: chain_spec_raw.rs  cli.rs  config.rs  doppelganger.rs  doppelganger_cli.rs  fork_off.rs  from_toml.rs  main.rs  monit.rs  overrides.rs  regular.rs  sync.rs  utils.rs
testing/: config-paseo.toml.bkp  config.toml.bkp
