[package]
name = "zombie-bite"
version = "0.1.0"
edition = "2021"

[dependencies]
zombienet-provider = "0.2"
zombienet-orchestrator = "0.2"
zombienet-support = "0.2"
zombienet-configuration = "0.2"
tokio = "1"
reqwest = "0.12"
tracing-subscriber = "0.3.18"
# TODO: extract and refactor only the needed logic
subalfred-core = "0"
anyhow = "1.0"
tracing = "0.1"

[patch.crates-io]
zombienet-orchestrator =  { path = "../zombienet-sdk/crates/orchestrator" }
zombienet-provider =  { path = "../zombienet-sdk/crates/provider" }
zombienet-configuration = { path = "../zombienet-sdk/crates/configuration" }
zombienet-support = { path = "../zombienet-sdk/crates/support" }