[package]
name = "zombie-bite"
version = "0.1.0"
edition = "2021"
default-run = "zombie-bite"


[dependencies]
zombienet-sdk = "0.2.9"
zombienet-provider = "0.2.9"
zombienet-orchestrator = "0.2.9"
zombienet-support = "0.2.9"
zombienet-configuration = "0.2.9"
tokio = "1"
reqwest = "0.12"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
tracing = "0.1"
fxhash = "0.2"
serde = "1"
serde_json = "1"
substorager = "0.11"
subhasher = "0.11"
array-bytes = "6.2"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
futures = "0.3"
hex = "0.4"
scale-value = "0.16"
tar = "0.4"
flate2 = "1.0"
sp-core = "34.0.0"

[[bin]]
name = "doppelganger"
path = "src/doppelganger.rs"

[[bin]]
name = "regular"
path = "src/regular.rs"

# [patch.crates-io]
# zombienet-orchestrator =  { path = "../zombienet-sdk/crates/orchestrator" }
# zombienet-provider =  { path = "../zombienet-sdk/crates/provider" }
# zombienet-configuration = { path = "../zombienet-sdk/crates/configuration" }
# zombienet-support = { path = "../zombienet-sdk/crates/support" }
# zombienet-sdk = { path = "../zombienet-sdk/crates/sdk" }